--- a/nfpa/src/app/total-systems/total-systems.component.html
+++ b/nfpa/src/app/total-systems/total-systems.component.html
@@ -35,7 +35,9 @@
     </div>
 
     <div class="heading1">Systems</div>
-
+    
+    <app-systems></app-systems>
+    <!-- 
     <div class="container">
 
         <div class="card">
@@ -104,7 +106,7 @@
                 </ul>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div class="product-container">
     </div>
@@ -112,7 +114,10 @@
     </div>
 
     <div class="heading1">Products</div>
-<div class="container">
+
+    <app-products></app-products>
+    <!-- 
+    <div class="container">
     <div class="card">
         <div class="imgBx">
             <a href="#">
@@ -177,7 +182,7 @@
             </ul>
         </div>
     </div>
-</div>
+</div> -->
 
 <div class="product-container">
     </div>
@@ -186,7 +191,9 @@
     
 <div class="heading1">Services</div>
 
-<div class="container">
+<app-services></app-services>
+<!-- <div class="container">
+
     <div class="card">
         <div class="imgBx">
             <a href="#">
@@ -251,5 +258,5 @@
             </ul>
         </div>
     </div>
-</div>
-</section>
+</div> -->
+</section> 
