--- a/nfpa/src/app/app.component.html
+++ b/nfpa/src/app/app.component.html
@@ -1,6 +1,9 @@
 
 <app-navbar></app-navbar>
-
+<!-- <app-homepage></app-homepage> -->
+<!-- <app-total-systems></app-total-systems> -->
 <app-footer></app-footer>
 
+
 <router-outlet></router-outlet>
+
