--- a/nfpa/src/app/total-systems/total-systems.component.css
+++ b/nfpa/src/app/total-systems/total-systems.component.css
@@ -131,12 +131,8 @@ input::placeholder {
     background-color: rgb(255, 255, 255);
 }
 
-.card {
-    background-color: #0a5983;
-}
-
-.container .card {
-    /* max-width: 50%; */
+/* .container .card {
+    // max-width: 50%; 
     margin: 30px 0px;
     height: 275px;
     padding: 20px 15px;
@@ -148,35 +144,14 @@ input::placeholder {
     transition: 0.3s ease-in-out;
     box-sizing: border-box;
     position: relative;
-}
+} */
 
-.imgBx {
-    width: 150px;
-    height: 150px;
-    position: absolute;
-    /* top: 50%; */
-    left: 0;
-    margin: 20px;
-    box-shadow: 0 5px 20px rgba(0, 0, 0, 1.2);
-    border-radius: 10px;
-    z-index: 1;
-}
 
-.imgBx .image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 10px;
-}
 
-.imgBx:hover {
-    transform: scale(1.1);
-}
-
-.container .card .details {
+/* .container .card .details {
     flex-grow: 1;
     background-color: rgba(255, 255, 255, 0.8);
-    /* background-color: #afe0ff; */
+    // background-color: #afe0ff; 
     background-color: #d9dee8;
     padding: 15px;
     height: 100%;
@@ -190,77 +165,4 @@ input::placeholder {
     margin-right: 20px;
     position: relative;
     text-align: left;
-}
-
-.details .heading{
-    position: absolute;
-    top: 37.5%;
-    transform: translateY(0);
-    transition: transform 0.7s ease-in;
-}
-
-.details ul{
-    position: absolute;
-    top: 75%;
-    opacity: 0;
-    transform: translateY(0%);
-    transition: opacity 0.7s ease-in, transform 0.7s ease-in;
-}
-
-.details ul a{
-    color: #0a5983;
-}
-
-.details ul a:hover{
-    color: #000000;
-}
-
-.details li{
-    opacity: 0;
-    transform: translateY(-50%);
-    transition: opacity 0.4s ease-in, transform 0.4s ease-in;
-}
-
-.container .card .details:hover {
-    transform: scale(1.1);
-}
-
-.details:hover .heading{
-    transform: translateY(-100%);
-    transition: opacity 0.7s ease, transform 0.7s ease;
-}
-
-.details:hover li{
-    opacity: 1;
-    transform: translateY(-130%);
-    transition: opacity 0.7s ease, transform 0.7s ease;
-}
-
-.container .card .details ul:nth-child(1) {
-    transition-delay: 1s;
-    opacity: 1;
-    transform: translateY(-50%);
-    transition: opacity 0.7s ease-in, transform 0.7s ease-in;
-}
-
-.details ul:nth-child(2) {
-    transition-delay: 2s;
-    opacity: 1;
-    transform: translateY(-40%);
-    transition: opacity 0.7s ease-in, transform 0.7s ease-in;
-}
-
-.container .card .details ul:nth-child(3) {
-    transition-delay: 3s;
-    opacity: 1;
-    transform: translateY(-30%);
-    transition: opacity 0.7s ease-in, transform 0.7s ease-in;
-}
-
-.container .card .details h2 {
-    margin-bottom: 15px;
-}
-
-
-
-
+} */
